[#pwando] Users can now view a product's adaptations

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -14,43 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
-UPDATE_DESCRIPTION: [pwando] - Added download options for non logged in users, check adaptations download
-UPDATE_DESCRIPTION: [pwando] - Added two functions (ln 90 & 100) for getting count of product adaptations
-UPDATE_DESCRIPTION: [pwando] - Users can now also print in .pdf. This had not worked in previous commit due to bug in pdfmaker
-UPDATE_DESCRIPTION: [pwando] - Users can now create .odt and .pdf files successfully as per specs. TODO .pdf, mediawiki, ODF
-UPDATE_DESCRIPTION: [pwando] - Added extra fields to product downloader table.
-UPDATE_DESCRIPTION: [pwando] - Winding up download product forms
-UPDATE_DESCRIPTION: [pwando] - Added form for capturing info on users who need to download but are not logged in
-UPDATE_DESCRIPTION: [pwando] - Added dependency on pdfmaker
-UPDATE_DESCRIPTION: [pwando] - Added css for displaying bookmark links
-UPDATE_DESCRIPTION: [pwando] - added view institution from adaptation - also removed commented code for adaptation code
-UPDATE_DESCRIPTION: [pwando] - fixed missing lang items in edit institution form
-UPDATE_DESCRIPTION: [pwando] - Added view featured adaptation
-UPDATE_DESCRIPTION: [pwando] - Added rating for product adaptations
-UPDATE_DESCRIPTION: [pwando] - Adding rating for product adaptations - WIP
-UPDATE_DESCRIPTION: [pwando] - Added feature - Bookmark a OER Adaptation Product
-UPDATE_DESCRIPTION: [pwando] - Added wall comments app for view adaptations
-UPDATE_DESCRIPTION: [pwando] - Add/Edit adaptation section folder or sections redirects back to view adaptation. Previously was redirecting to original products page
-UPDATE_DESCRIPTION: [pwando] - Added extra fields for table sectioncontent
-UPDATE_DESCRIPTION: [pwando] - Users can add adaptation section - wip edit adaptation section
-UPDATE_DESCRIPTION: [pwando] - Renamed adaptations home path from 1b to adaptationlist
-UPDATE_DESCRIPTION: [pwando] - Included adaptations table. Kindly patch
-UPDATE_DESCRIPTION: [pwando] - Formatted adaptations grid view as per specs
-UPDATE_DESCRIPTION: [dkeats] - Removed the userdata stuff to its own module
-UPDATE_DESCRIPTION: [pwando] - Added extra form for adding new adaptation from product as per requirements. UPDATE OER SKIN. Still WIP
-UPDATE_DESCRIPTION: [dkeats] - Added code for userextra - still a WIP
-UPDATE_DESCRIPTION: [pwando] - Added view full adaptation - WIP
-UPDATE_DESCRIPTION: [pwando] - Added functions for managing product comments  
-UPDATE_DESCRIPTION: [pwando] - Refactored css for view adaptation. Update OER skins before patching
-UPDATE_DESCRIPTION: [pwando] - Reformatted viewadaptation table per specs
-UPDATE_DESCRIPTION: [pwando] - Added sections on view adaptation
-UPDATE_DESCRIPTION: [pwando] - On adaptations - added keywords and linked each to an institution
-UPDATE_DESCRIPTION: [pwando] - Users can now view the details of an adaptation by clicking on the respective thumbnail. Still WIP.
-UPDATE_DESCRIPTION: [pwando] - Fixed bug in form for adding an adaptation from an existing product. Restored form validations for add/edit adaptation. Changed Fieldset headings
-UPDATE_DESCRIPTION: [pwando] - Users can now adapt from existing adaptations successfully. To do, fix adapt from product
-UPDATE_DESCRIPTION: [pwando] - Allowed users to adopt from product list and to also adopt from adaptations -  todo: test both functionalities  when navigating during add/edit
-UPDATE_DESCRIPTION: [pwando] - Almost done with adaptation code iteration - 1. todo: Test then consider aspects in specs and integrate
-UPDATE_DESCRIPTION: [pwando] - adding functionality to manage adaptations
+UPDATE_DESCRIPTION: [pwando] - Users can now view a product's adaptations
 
 COMMENT: Blocks used in the OER module
 WIDEBLOCK: groupedit
