[pwando] Formated for featured product block

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.161
+MODULE_VERSION: 0.162
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -225,6 +225,7 @@ TEXT: mod_oer_downloadlnfive|Phrase If you are already a member of one of the UN
 TEXT: mod_oer_clicktologin|Phrase click here to login|click here to login
 TEXT: mod_oer_downloadlnsix|Phrase for download continued|Once logged-in you can proceed with creation of a new adaptation
 TEXT: mod_oer_downloadlnseven|Phrase I want to proceed to download|I want to proceed to download
+TEXT: mod_oer_seeoriginalunesco|Phrase See UNESCO original|See UNESCO original
 
 COMMENT: TEXT FOR ADAPTATIONS
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
@@ -254,6 +255,7 @@ TEXT: mod_oer_adding|Word Adding|Adding
 TEXT: mod_oer_editing|Word Editing|Editing
 TEXT: mod_oer_sectionviewaddadaptation|Phrase Section view add adaptation|Section view add adaptation
 TEXT: mod_oer_sectionvieweditadaptation|Phrase Section view edit adaptation|Section view edit adaptation
+TEXT: mod_oer_featuredadaptation|Phrase Featured adaptation|Featured adaptation
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????<<<<<<<<<<<<<<<<<<<<<<,
 TEXT: mod_oer_loclat|Latitude|Latitude
