--- a/about/register.conf
+++ b/about/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: About
 MODULE_DESCRIPTION: A simple module to render an about page for a site
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 17, 2012, 10:05 am
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: about
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -15,6 +15,7 @@ TABLE: tbl_about_moduleblocks
 
 MENU_CATEGORY: Developer
 WIDEBLOCK: aboutmiddle
+BLOCK: contact
 
 
 COMMENT: Creating a directory for the module
