formatted adaptation listing

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.163
+MODULE_VERSION: 0.164
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -338,6 +338,7 @@ TEXT: mod_oer_group_locincorrect|Label for location|Please enter your location i
 TEXT: mod_oer_existingadaptations|Phrase See all existing adaptations of this product|See all existing adaptations of this product
 TEXT: mod_oer_seeall|Phrase See all|See all
 TEXT: mod_oer_group_new|Phrase Create Group|Create Group
+TEXT: mod_oer_join|Join|Join
 
 COMMENT: ------------ Rules for the group edit form -----------------
 TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
