--- a/modulelist/register.conf
+++ b/modulelist/register.conf
@@ -3,13 +3,14 @@ MODULE_NAME: Module List
 MODULE_DESCRIPTION: List of all modules on this particular installation
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2010 01 15
-MODULE_VERSION: 0.004
+MODULE_VERSION: 0.005
 MODULE_PATH: modulelist
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: modulelist
 
+UPDATE_DESCRIPTION: Added module icon to the output
 UPDATE_DESCRIPTION: Colour coded output by module status, need styles in metallic and canvas skin for it to work,
 UPDATE_DESCRIPTION: Start
 MODULE_STATUS: beta
