[#pwando] - Formatted full view of adaptation

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -241,6 +241,7 @@ TEXT: mod_oer_adaptedby|Phrase Adapted by|Adapted by
 TEXT: mod_oer_adaptedin|Phrase Adapted in|Adapted in
 TEXT: mod_oer_bookmark|Word Bookmark|Bookmark
 TEXT: mod_oer_fullinfo|Phrase Full information on this institution|Full information on this institution
+TEXT: mod_oer_fullviewinst|Phrase Full view of institution|Full view of institution
 TEXT: mod_oer_managedby|Phrase Managed by|Managed by
 TEXT: mod_oer_comments|Word Comments|Comments
 TEXT: mod_oer_viewgroup|Phrase View group|View group
