updated groups and toolbar

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.164
+MODULE_VERSION: 0.165
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -340,6 +340,10 @@ TEXT: mod_oer_existingadaptations|Phrase See all existing adaptations of this pr
 TEXT: mod_oer_seeall|Phrase See all|See all
 TEXT: mod_oer_group_new|Phrase Create Group|Create Group
 TEXT: mod_oer_join|Join|Join
+TEXT: mod_oer_members|Word members|Members
+TEXT: mod_oer_word_adaptations|Word adaptations|Adaptations
+TEXT: mod_oer_discussions|Word Discussions|Discussions
+
 
 COMMENT: ------------ Rules for the group edit form -----------------
 TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
