[#pwando] - Fixed delete adaptation

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -149,6 +149,7 @@ TEXT: mod_oer_originalproduct_heading_new_step3|Phrase New original product step
 TEXT: mod_oer_originalproduct_heading_new_step4|Phrase New original product step 4|New original product step 4
 TEXT: mod_oer_originalproduct_heading_new_step5|Phrase New original product step 5|New original product step 5
 TEXT: mod_oer_confirm_delete_original_product|Phrase Are you sure you want to delete this product?|Are you sure you want to delete this product?
+TEXT: mod_oer_confirm_delete_adaptation|Phrase Are you sure you want to delete this adaptation?|Are you sure you want to delete this adaptation?
 TEXT: mod_oer_sortby|Phrase sort by|Sort by
 TEXT: mod_oer_viewas|Phrase View as|View as
 TEXT: mod_oer_grid|Word Grid|Grid
