added notification, delete institution, formatted forum

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.170
+MODULE_VERSION: 0.172
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -311,6 +311,8 @@ TEXT: mod_oer_institution_zip|Word Zip|Zip
 TEXT: mod_oer_institution_country|Country|Country
 TEXT: mod_oer_institution_city|City|City
 TEXT: mod_oer_institution_websitelink|Phrase website link|Website link
+TEXT: mod_oer_confirmdeleteinstitution|Phrase Delte institution|Delete institution ?
+TEXT: mod_oer_institutioninuse|Phrase this institution is in use|This institution is in use, cannot be deleted
 
 COMMENT: ------------- TEXT FOR GROUPS ----------------
 TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
