[#pwando] Products can now be adapted together with their nodes and sections. Delete adaptation updates adaptation nodes and sections

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.172
+MODULE_VERSION: 0.173
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -14,7 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
-UPDATE_DESCRIPTION: [pwando] - Users can now view a product's adaptations
+UPDATE_DESCRIPTION: [pwando] - Products can now be adopted together with their nodes and sections. Delete adaptation updates adaptation nodes and sections
 
 COMMENT: Blocks used in the OER module
 WIDEBLOCK: groupedit
