[#pwando] - Resized width of the download dialog window

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -14,7 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
-UPDATE_DESCRIPTION: [pwando] - Products can now be adopted together with their nodes and sections. Delete adaptation updates adaptation nodes and sections
+UPDATE_DESCRIPTION: [pwando] - Products can now be adapted together with their nodes and sections. Delete adaptation updates adaptation nodes and sections
 
 COMMENT: Blocks used in the OER module
 WIDEBLOCK: groupedit
