--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.173
+MODULE_VERSION: 0.174
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -346,6 +346,7 @@ TEXT: mod_oer_members|Word members|Members
 TEXT: mod_oer_word_adaptations|Word adaptations|Adaptations
 TEXT: mod_oer_discussions|Word Discussions|Discussions
 TEXT: mod_oer_logintoseemembers|Phrase log in to see members|Log in to see members
+TEXT: mod_oer_region|Word Region|Region
 
 
 COMMENT: ------------ Rules for the group edit form -----------------
