added product filtering

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.174
+MODULE_VERSION: 0.175
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -38,6 +38,7 @@ TABLE: tbl_oer_sectioncontent
 TABLE: tbl_oer_productrating
 TABLE: tbl_oer_featuredproduct
 TABLE: tbl_oer_downloaders
+TABLE: tbl_oer_product_themes
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
