[pwando] - Fixing delete user via ajax

--- a/oeruserdata/register.conf
+++ b/oeruserdata/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER User Data
 MODULE_DESCRIPTION: Provides a means to capture and maintain the extra user data required by the OER module. It can also be useful to any other project that needs this extra data.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 1, 2012, 8:34 am
-MODULE_VERSION: 0.014
+MODULE_VERSION: 0.015
 MODULE_PATH: oeruserdata
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -41,8 +41,10 @@ TEXT: mod_oeruserdata_status_success|Saved successfully|Saved successfully
 TEXT: mod_oeruserdata_status_fail|Save failed|Save failed
 TEXT: mod_oeruserdata_ulst|Manage users|Manage users
 TEXT: mod_oeruserdata_regstatus|Phrase Registration Status|Registration Status
-TEXT: mod_oeruserdata_regsuccessmsg|Phrase for Registration success|Congratulations! You have been added successfully
+TEXT: mod_oeruserdata_regsuccessmsg|Phrase for Registration success|Congratulations! You have been registered successfully
+TEXT: mod_oeruserdata_updatesuccessmsg|Phrase for Registration update success|Congratulations! Your record has been updated successfully
 TEXT: mod_oeruserdata_regfailmsg|Phrase for Registration failed|Sorry! Registration failed. Kindly try again or contact the system administrator
+TEXT: mod_oeruserdata_confirm_delete_user|Phrase Are you sure you want to delete this user?|Are you sure you want to delete this user?
 
 USES: phrase_firstname|First name|First name
 USES: word_surname|Surname|Surname
