[#pwando] Added alt text for modify adaptation icon-links

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -258,6 +258,8 @@ TEXT: mod_oer_editing|Word Editing|Editing
 TEXT: mod_oer_sectionviewaddadaptation|Phrase Section view add adaptation|Section view add adaptation
 TEXT: mod_oer_sectionvieweditadaptation|Phrase Section view edit adaptation|Section view edit adaptation
 TEXT: mod_oer_featuredadaptation|Phrase Featured adaptation|Featured adaptation
+TEXT: mod_oer_markfeatured|Phrase Mark as Featured product|Mark as Featured
+TEXT: mod_oer_createadaptation|Phrase Create an adaptation|Create an adaptation
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????<<<<<<<<<<<<<<<<<<<<<<,
 TEXT: mod_oer_loclat|Latitude|Latitude
