[#pwando] - Fixed full view for adaptation and section content

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.175
+MODULE_VERSION: 0.176
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -14,7 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
-UPDATE_DESCRIPTION: [pwando] - Products can now be adapted together with their nodes and sections. Delete adaptation updates adaptation nodes and sections
+UPDATE_DESCRIPTION: [pwando] - Fixed full view for adaptation and section content
 
 COMMENT: Blocks used in the OER module
 WIDEBLOCK: groupedit
@@ -196,12 +196,13 @@ TEXT: mod_oer_calendar|Word calendar|Calendar
 TEXT: mod_oer_year|Word Year|Year
 TEXT: mod_oer_sectionname|Section name|Section name
 TEXT: mod_oer_sectiontype|Section type|Section type
+TEXT: mod_oer_sectionkeywords|Section keywords|Section keywords
 TEXT: mod_oer_folder|Word folder|Folder
 TEXT: mod_oer_status|Word status|Status
 TEXT: mod_oer_addnewcontent|Phrase Add new content|Add new content
 TEXT: mod_oer_content|Word content|Content
 TEXT: mod_oer_contributedby|Phrase Contributed by|Contributed by
-TEXT: mod_oer_fullviewofproduct|Phrase full view of product|Full view of product
+TEXT: mod_oer_fullviewofproduct|Phrase full view of the product|Full view of the product
 TEXT: mod_oer_productfullinfo|Phrase Full information on this product|Full information on this product
 TEXT: mod_oer_introduction|Word introduction|Introduction
 TEXT: mod_oer_sectiontitle|Section title|Section title
