[pwando] - Fixed edit and delete users

--- a/oeruserdata/register.conf
+++ b/oeruserdata/register.conf
@@ -1,7 +1,7 @@
 MODULE_ID: oeruserdata
 MODULE_NAME: OER User Data
 MODULE_DESCRIPTION: Provides a means to capture and maintain the extra user data required by the OER module. It can also be useful to any other project that needs this extra data.
-MODULE_AUTHORS: Derek Keats
+MODULE_AUTHORS: Derek Keats, Paul Mungai
 MODULE_RELEASEDATE: February 1, 2012, 8:34 am
 MODULE_VERSION: 0.015
 MODULE_PATH: oeruserdata
@@ -13,7 +13,7 @@ MODULE_CATEGORY: oeruserdata
 MENU_CATEGORY: Developer
 MODULE_STATUS: Alpha
 
-UPDATE_DESCRIPTION: [pwando] - Added dialog window for registration success/fail status
+UPDATE_DESCRIPTION: [pwando] - Added dialog window for registration success/fail status. Fixed edit and delete users.
 
 COMMENT: -------- DATA--------
 TABLE: tbl_oeruserdata_userextra
