added browse by map

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.176
+MODULE_VERSION: 0.178
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -178,6 +178,7 @@ TEXT: mod_oer_users|Word users|Users
 TEXT: mod_oer_modulemanager|Phrase Module Manager|Module Manager
 TEXT: mod_oer_institutions|Word institutions|Institutions
 TEXT: mod_oer_adaptedin|Phrase adapted in|Adapted in
+TEXT: mod_oer_browsebymap|Phrase Browse by map|Browse by map
 
 
 COMMENT: TEXT FOR PRODUCT SECTION
@@ -321,7 +322,7 @@ TEXT: mod_oer_institutioninuse|Phrase this institution is in use|This institutio
 COMMENT: ------------- TEXT FOR GROUPS ----------------
 TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
 TEXT: mod_oer_group_fieldset2|Heading for group fieldset no2 link|Group Contact Details
-TEXT: mod_oer_group_fieldset3|Heading for group fieldset no3link|Group Geograohical Location
+TEXT: mod_oer_group_fieldset3|Heading for group fieldset no3link|Group Geographical Location
 TEXT: mod_oer_group_fieldset4|Heading for group fieldset no4 link|Group Linked Institution
 TEXT: mod_oer_group_fieldset5|Heading for group fieldset no5 link|Group Descriptions
 TEXT: mod_oer_group_name|Heading for group name input|Group Name
@@ -345,6 +346,9 @@ TEXT: mod_oer_group_locincorrect|Label for location|Please enter your location i
 TEXT: mod_oer_existingadaptations|Phrase See all existing adaptations of this product|See all existing adaptations of this product
 TEXT: mod_oer_seeall|Phrase See all|See all
 TEXT: mod_oer_group_new|Phrase Create Group|Create Group
+TEXT: mod_oer_creategroupstep1|Phrase Create Group Step 1|Create Group Step 1
+TEXT: mod_oer_creategroupstep2|Phrase Create Group Step 2|Create Group Step 2
+TEXT: mod_oer_creategroupstep3|Phrase Create Group Step 3|Create Group Step 3
 TEXT: mod_oer_join|Join|Join
 TEXT: mod_oer_members|Word members|Members
 TEXT: mod_oer_word_adaptations|Word adaptations|Adaptations
