[#pwando] - Added view for compare adaptations

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.179
+MODULE_VERSION: 0.180
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -262,6 +262,7 @@ TEXT: mod_oer_sectionvieweditadaptation|Phrase Section view edit adaptation|Sect
 TEXT: mod_oer_featuredadaptation|Phrase Featured adaptation|Featured adaptation
 TEXT: mod_oer_markfeatured|Phrase Mark as Featured product|Mark as Featured
 TEXT: mod_oer_createadaptation|Phrase Create an adaptation|Create an adaptation
+TEXT: mod_oer_compareadaptation|Phrase Compare adaptations|Compare adaptations
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????<<<<<<<<<<<<<<<<<<<<<<,
 TEXT: mod_oer_loclat|Latitude|Latitude
