added share by email

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.180
+MODULE_VERSION: 0.181
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -179,7 +179,8 @@ TEXT: mod_oer_modulemanager|Phrase Module Manager|Module Manager
 TEXT: mod_oer_institutions|Word institutions|Institutions
 TEXT: mod_oer_adaptedin|Phrase adapted in|Adapted in
 TEXT: mod_oer_browsebymap|Phrase Browse by map|Browse by map
-
+TEXT: mod_oer_home|Word Home|Home
+TEXT: mod_oer_shareviaemail|Phrase Share via email|Share via email
 
 COMMENT: TEXT FOR PRODUCT SECTION
 TEXT: mod_oer_forward|Word forward|Forward
