--- a/pagenotes/register.conf
+++ b/pagenotes/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Page notes
 MODULE_DESCRIPTION: Take notes on any page within a Chisimba installation.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 23, 2012, 12:06 pm
-MODULE_VERSION: 0.008
+MODULE_VERSION: 0.009
 MODULE_PATH: pagenotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,7 @@ MODULE_LANGTERMS: pagenotes
 MODULE_CATEGORY: pagenotes
 
 TABLE: tbl_pagenotes_notes
+TABLE: tbl_pagenotes_annotations
 
 COMMENT: Credit to Koos van der Kolk (koosvdkolk [at] gmail.com) for
 COMMENT: the jquery library that made this module possible.
@@ -19,6 +20,7 @@ COMMENT: the jquery library that made this module possible.
 
 MENU_CATEGORY: Developer
 WIDEBLOCK: pagenotesmiddle
+WIDEBLOCK: pagenoteswidebl
 BLOCK: annotatecontrol
 BLOCK: pagenotecontrol
 BLOCK: pagenotesright
@@ -34,5 +36,6 @@ TEXT: mod_pagenotes_status_success|Success message|Note was saved
 TEXT: mod_pagenotes_status_fail|Fail message|Failed to save note
 TEXT: mod_pagenotes_status_faila|Fail message for annotation|Failed to save annotation
 TEXT: mod_pagenotes_status_successa|Success message for annotation|Annotation was saved
-TEXT: mod_pagenotes_notloggedin|Message when they are not logged in|Page annotations are only enabled for users who are logged in. You must log in for this feature to work.
+TEXT: mod_pagenotes_notloggedin|Message when they are not logged in for annotations|Page annotations are only enabled for users who are logged in. You must log in for this feature to work.
+TEXT: mod_pagenotes_nlipn|Message when they are not logged in for pagenotes|Page notes are only enabled for users who are logged in. You must log in for this feature to work.
 TEXT: mod_pagenotes_toggle|Toggle annotations on/off|Toggle annotations
