[#pwando] - On compare adaptations - added search and clear selection features

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -232,6 +232,7 @@ TEXT: mod_oer_downloadlnseven|Phrase I want to proceed to download|I want to pro
 TEXT: mod_oer_seeoriginalunesco|Phrase See UNESCO original|See UNESCO original
 
 COMMENT: TEXT FOR ADAPTATIONS
+TEXT: mod_oer_comparetools|Phrase Compare tools|Compare tools
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
 TEXT: mod_oer_adaptation_heading_step2|Phrase Adaptation step 2|Adaptation step 2
 TEXT: mod_oer_adaptation_heading_step3|Phrase Adaptation step 3|Adaptation step 3
@@ -264,6 +265,8 @@ TEXT: mod_oer_featuredadaptation|Phrase Featured adaptation|Featured adaptation
 TEXT: mod_oer_markfeatured|Phrase Mark as Featured product|Mark as Featured
 TEXT: mod_oer_createadaptation|Phrase Create an adaptation|Create an adaptation
 TEXT: mod_oer_compareadaptation|Phrase Compare adaptations|Compare adaptations
+TEXT: mod_oer_compareselected|Phrase Compare selected|Compare selected
+TEXT: mod_oer_clearselection|Phrase Clear selection|Clear selection
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????<<<<<<<<<<<<<<<<<<<<<<,
 TEXT: mod_oer_loclat|Latitude|Latitude
