[#pwando] - On compare adaptations - completing compare selected feature

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -250,11 +250,11 @@ TEXT: mod_oer_fullviewinst|Phrase Full view of institution|Full view of institut
 TEXT: mod_oer_managedby|Phrase Managed by|Managed by
 TEXT: mod_oer_comments|Word Comments|Comments
 TEXT: mod_oer_viewgroup|Phrase View group|View group
-TEXT: mod_oer_makenewfromadaptation|Phrase Make a new adaptation using this UNESCO product|Make a new adaptation using this UNESCO product
+TEXT: mod_oer_makenewfromadaptation|Phrase Make a new adaptation using this UNESCO adaptation|Make a new adaptation using this UNESCO adaptation
 TEXT: mod_oer_existingadaptations|Phrase See existing adaptations of this UNESCO Product|See existing adaptations of this UNESCO Product
 TEXT: mod_oer_editmetadata|Phrase Edit metadata|Edit metadata
 TEXT: mod_oer_fullprodview|Phrase Full view of product|Full view of product
-TEXT: mod_oer_makenewadaptation|Phrase Make new adaptation using thos UNESCO Product|Make new adaptation using thos UNESCO Product
+TEXT: mod_oer_makenewadaptation|Phrase Make new adaptation using this UNESCO Product|Make new adaptation using this UNESCO Product
 TEXT: mod_oer_existingadaptations|Phrase See existing adaptation of this UNESCO Product|See existing adaptation of this UNESCO Product
 TEXT: mod_oer_adaptationotes|Phrase Adaptation notes|Adaptation notes
 TEXT: mod_oer_adding|Word Adding|Adding
