Fixed bugs in personal blocks, improved table formatting

--- a/personalblocks/register.conf
+++ b/personalblocks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Personal blocks
 MODULE_DESCRIPTION: Allows the creation of personal blocks for display on sidebar block areas. Requires the blockalicious module to function. Personal blocks allow the addition of web widgets in locations such as a blog.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2008 06 14
-MODULE_VERSION: 0.37
+MODULE_VERSION: 0.381
 MODULE_PATH: personalblocks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -30,6 +30,7 @@ COMMENT: DEPENDS- blockalicious
 TAGS: blocks|widgets
 MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: Miscellaneous improvements
 UPDATE_DESCRIPTION: Corrected some text
 UPDATE_DESCRIPTION: Enabled styling of middle blocks
 UPDATE_DESCRIPTION: fixed path from htmlelements to jquery for jqexpanding class
@@ -69,7 +70,7 @@ TEXT: mod_personalblocks_nomiddle|Message for when there are no middle blocks|Yo
 
 TEXT: mod_personalblocks_blocktype|Block type|Type
 TEXT: mod_personalblocks_personal|Personal|Personal block
-TEXT: mod_personalblocks_context|Context|[-CONTEXT-] block
+TEXT: mod_personalblocks_context|Context|[-CONTEXT-]
 TEXT: mod_personalblocks_contextcode|Context code|[-CONTEXT-] code
 TEXT: mod_personalblocks_sortorder|Sort order|Sort order
 TEXT: mod_personalblocks_info|Info for the mouseover|This is a [-BLOCKTYPE=] [-CONTEXTMESSAGE-] that was created by [-USER-], [-HUMANDATE-].
