added permissions manager to control access to vroious resources

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.183
+MODULE_VERSION: 0.184
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -360,7 +360,7 @@ TEXT: mod_oer_word_adaptations|Word adaptations|Adaptations
 TEXT: mod_oer_discussions|Word Discussions|Discussions
 TEXT: mod_oer_logintoseemembers|Phrase log in to see members|Log in to see members
 TEXT: mod_oer_region|Word Region|Region
-
+TEXT: mod_oer_accessdenied|Phrase Access  Denied|Access denied
 
 COMMENT: ------------ Rules for the group edit form -----------------
 TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
