--- a/calendar/register.conf
+++ b/calendar/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Calendar
 MODULE_DESCRIPTION: The calendar modules provides an interface that allows users to store personal and course events. It also allows users to point to a website for more information, as well as upload related documents.
 MODULE_AUTHORS: Tohir Solomons modified by david wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.523
+MODULE_VERSION: 1.524
 MODULE_PATH: calendar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -62,4 +62,5 @@ TEXT: help_calendar_process_delete|Help Title Text|Next to each event, there are
 TEXT: mod_calendarbase_relatedwebsite|RelatedWebsite|Related Website
 TEXT: mod_calendar_relatedwebsite|RelatedWebsite|Related Website
 TEXT: mod_calendar_fileupload|uploadFile | Upload File
+TEXT: mod_calendar_sidecal|Side calendar|Side calendar
 USES: mod_calendarbase_isthisamultidayevent|Is this a multiday event?|Is this a multiday event?
