Downgraded from stable to alpha

--- a/calendarbase/register.conf
+++ b/calendarbase/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Calendar Base Module
 MODULE_DESCRIPTION: This module holds the core classes and functionality for calendar and event management that allows it to be shared between user, context and workgroup. It also holds some classes for generating calendars. It is not a module that is directly accessible by users, though some modules depended on it. There are plans to deprecate it in favour of the eventscalendar module.
 MODULE_AUTHORS: Tohir Solomons modification by David wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.107
+MODULE_VERSION: 1.108
 MODULE_PATH: calendarbase
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,7 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: Calendarbase
 MODULE_CATEGORY: base
 
-MODULE_STATUS: stable
+MODULE_STATUS: alpha
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
 
