--- a/calendar/register.conf
+++ b/calendar/register.conf
@@ -3,14 +3,14 @@ MODULE_NAME: Calendar
 MODULE_DESCRIPTION: The calendar modules provides an interface that allows users to store personal and course events. It also allows users to point to a website for more information, as well as upload related documents.
 MODULE_AUTHORS: Tohir Solomons modified by david wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.524
+MODULE_VERSION: 1.525
 MODULE_PATH: calendar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: Calendar
 MODULE_CATEGORY: workgroups
-MODULE_STATUS: stable
+MODULE_STATUS: alpha
 
 MENU_CATEGORY: user
 
