--- a/schools/register.conf
+++ b/schools/register.conf
@@ -22,6 +22,8 @@ MENU_CATEGORY: Developer
 WIDEBLOCK: schoolsmain
 WIDEBLOCK: schoolsadd
 WIDEBLOCK: schoolsedit
+WIDEBLOCK: schoolsdistricts
+WIDEBLOCK: schoolscontacts
 BLOCK: schoolsleft
 
 COMMENT: Common titles
@@ -79,10 +81,27 @@ TEXT: mod_schools_invalidusername|The username can only contain letters and numb
 TEXT: mod_schools_passwordsnotalike|The passwords you have entered do not match|The passwords you have entered do not match
 TEXT: mod_schools_usernameshort|The username must be longer than 3 characters in length|The username must be longer than 3 characters in length
 TEXT: mod_schools_deleteconfirm|Are you sure you want to delete this item|Are you sure you want to delete this item
+TEXT: mod_schools_manage|Manage schools components|Manage schools components
+TEXT: mod_schools_managedistricts|Manage districts|Manage districts
+TEXT: mod_schools_manageprincipals|Manage principals|Manage principals
+TEXT: mod_schools_adddistrict|Add district|Add district
+TEXT: mod_schools_editdistrict|Edit district|Edit district
+TEXT: mod_schools_deletedistrict|Delete district|Delete district
+TEXT: mod_schools_districtname|District name|District name
+TEXT: mod_schools_districts|Districts|Districts
+TEXT: mod_schools_manageschools|Manage schools|Manage schools
+TEXT: mod_schools_managecontacts|Manage contacts|Manage contacts
+TEXT: mod_schools_schools|Schools|Schools
+TEXT: mod_schools_addcontact|Add contact|Add contact
+TEXT: mod_schools_editcontact|Edit contact|Edit contact
+TEXT: mod_schools_deletecontact|Delete contact|Delete contact
+TEXT: mod_schools_contacts|Contacts|Contacts
+TEXT: mod_schools_nocontacts|No contacts found for this school|No contacts found for this school
 
 COMMENT: Error text
 TEXT: mod_schools_error_1|No data error|[-fieldname-] can not be blank
 TEXT: mod_schools_error_2|No selection error|Please select a [-fieldname-]
 TEXT: mod_schools_contactnumbers|Contact numbers cannot be blank|Contact numbers cannot be blank
 TEXT: mod_schools_invalidemail|The email address is invalid|The email address is invalid
+
 
