Old changes...forgot them

--- a/forms/register.conf
+++ b/forms/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: forms
-MODULE_NAME: Form Builder
-MODULE_DESCRIPTION: The Form Builder module allows for the dynamic creation of html forms for capturing, processing and distributing data. The initial phase will allow users to create and manage forms using the fckeditor form controls. Displaying the form will take the form of a filter [FORMS]form_id[/FORMS] that will be used to display the form from any filtered displayable like CMS, BLOG etc. Data will always get stored into the flexible forms table and reports will be generated on demand to be distributed via email, pdf, csv etc.
+MODULE_NAME: Form maker
+MODULE_DESCRIPTION: The Form maker module allows for the dynamic creation of html forms for capturing, processing and distributing data. The initial phase will allow users to create and manage forms using the fckeditor form controls. Displaying the form will take the form of a filter [FORMS]form_id[/FORMS] that will be used to display the form from any filtered displayable like CMS, BLOG etc. Data will always get stored into the flexible forms table and reports will be generated on demand to be distributed via email, pdf, csv etc.
 MODULE_AUTHORS: Charl Mert
 MODULE_RELEASEDATE: 2008/12/11
-MODULE_VERSION: 0.2
+MODULE_VERSION: 0.201
 MODULE_PATH: forms
 MODULE_ISADMIN: 0
 MODULE_HASADMINPAGE: 1
