--- a/about/register.conf
+++ b/about/register.conf
@@ -3,13 +3,14 @@ MODULE_NAME: About
 MODULE_DESCRIPTION: A simple module to render an about page for a site
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 17, 2012, 10:05 am
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.004
 MODULE_PATH: about
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: about
 MODULE_CATEGORY: about
+MODULE_STATUS: stable
 
 TABLE: tbl_about_moduleblocks
 
