Changed module status to alpha pending testing

--- a/adbanner/register.conf
+++ b/adbanner/register.conf
@@ -3,20 +3,21 @@ MODULE_NAME: Ad Banner
 MODULE_DESCRIPTION: The ad_banner module allows for the creation, tracking and management of ad banners. The banner transitioning effects belong to JQuery 1.2.3. Currently supports the following image types : .jpg|.png|.gif
 MODULE_AUTHORS: Charl Joseph Mert
 MODULE_RELEASEDATE: 2008 03 15
-MODULE_VERSION: 0.211
+MODULE_VERSION: 0.213
 MODULE_PATH: adbanner
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
 MENU_CATEGORY: admin
 
+
 BLOCK: adbanner
 MODULE_CATEGORY: banner
 
-TABLE: tbl_ad_banners
+MODULE_STATUS: alpha
 
-MODULE_STATUS: Pre-alpha
+TABLE: tbl_ad_banners
+UPDATE_DESCRIPTION: Changed module status to alpha pending testing
 
 COMMENT: The code in this module follows no known human convention (DWK, 2010 11 30)
-
 TEXT: mod_adbanner_editalt|Label for edit icon|Edit this Info
 TEXT: mod_adbanner_delalt|Label for delete icon|Delete this banner
