Changed module status to  marked_for_removal

--- a/adm/register.conf
+++ b/adm/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Active Dynamic Mirroring
 MODULE_DESCRIPTION: Active Dynamic Mirroring allows for remote servers to mirror content and data to each other. This may take the form of a partial mirror (content only) or a full mirror - where all data (including user data like groups and permissions) are mirrored. A full mirror can be seen as a clone of another site, while a partial mirror is a different site with the same user generated data and content.
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2007 06 01
-MODULE_VERSION: 0.205
+MODULE_VERSION: 0.206
 MODULE_STATUS: pre-alpha
 MODULE_PATH: adm
 MODULE_ISADMIN: 0
@@ -11,6 +11,8 @@ MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: adm
 MODULE_CATEGORY: adm
+
+MODULE_STATUS: marked_for_removal
 
 CONFIG: adm_transport|rpc|mod_adm_transport
 CONFIG: ADM_MAIL_DSN|not set|mod_adm_maildsn
