--- a/computerscience/register.conf
+++ b/computerscience/register.conf
@@ -15,6 +15,8 @@ CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
 MODULE_STATUS: invisible
 
+MODULE_STATUS: beta
+
 UPDATE_DESCRIPTION: changed status to invisible
 
 TEXT: mod_computerscience_commenttitle|Label for comment title|Title of comment
