MODULE_STATUS changed to pre-alpha

--- a/createaccount/register.conf
+++ b/createaccount/register.conf
@@ -1,6 +1,6 @@
 MODULE_ID: createaccount
 MODULE_NAME: Create account
-MODULE_DESCRIPTION: Enables users to create their own account byt self-registration, and provides blocks and methods for this purpose.
+MODULE_DESCRIPTION: Enables users to create their own account by self-registration, and provides blocks and methods for this purpose.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 26, 2011, 3:07 pm
 MODULE_VERSION: 0.003
@@ -10,6 +10,8 @@ MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: createaccount
 MODULE_CATEGORY: createaccount
+MODULE_STATUS: pre-alpha
 
+COMMENT: Investigate, this might be removable.
 
 BLOCK: createaccount
