MODULE_STATUS: marked_for_removal

--- a/demotemplate/register.conf
+++ b/demotemplate/register.conf
@@ -10,8 +10,10 @@ MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: demotemplate
 MODULE_CATEGORY: demotemplate
+MODULE_STATUS: marked_for_removal
 
 MENU_CATEGORY: Developer
 WIDEBLOCK: hello
 BLOCK: left
 BLOCK: right
+
