--- a/dhtmlgoodies/register.conf
+++ b/dhtmlgoodies/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Dhtmlgoodies
 MODULE_DESCRIPTION: Used as a support module for dhtmlgoodies widgets.
 MODULE_AUTHORS: Jeremy O'Connor
 MODULE_RELEASEDATE: 2010 02 08
-MODULE_VERSION: 1.0
+MODULE_VERSION: 1.001
 MODULE_PATH: dhtmlgoodies
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -13,3 +13,5 @@ MODULE_LANGTERMS: dhtmlgoodies
 MODULE_CATEGORY: javascript
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
+
+MODULE_STATUS: beta
