--- a/modulelist/register.conf
+++ b/modulelist/register.conf
@@ -1,15 +1,16 @@
 MODULE_ID: modulelist
 MODULE_NAME: Module List
 MODULE_DESCRIPTION: List of all modules on this particular installation
-MODULE_AUTHORS: Paul Scott
+MODULE_AUTHORS: Paul Scott added to by Derek Keats
 MODULE_RELEASEDATE: 2010 01 15
-MODULE_VERSION: 0.005
+MODULE_VERSION: 0.007
 MODULE_PATH: modulelist
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: modulelist
 
+UPDATE_DESCRIPTION: Added ability to display core_modules, as well as calculate more stats on modules
 UPDATE_DESCRIPTION: Added module icon to the output
 UPDATE_DESCRIPTION: Colour coded output by module status, need styles in metallic and canvas skin for it to work,
 UPDATE_DESCRIPTION: Start
