--- a/oer/register.conf
+++ b/oer/register.conf
@@ -323,7 +323,13 @@ TEXT: mod_oer_institution_city|City|City
 TEXT: mod_oer_institution_websitelink|Phrase website link|Website link
 TEXT: mod_oer_confirmdeleteinstitution|Phrase Delte institution|Delete institution ?
 TEXT: mod_oer_institutioninuse|Phrase this institution is in use|This institution is in use, cannot be deleted
-
+COMMENT: ------------- TEXT FOR REPORTS ----------------
+TEXT: mod_oer_wordproperty|Word Property|Property
+TEXT: mod_oer_wordvalue|Word Value|Value
+TEXT: mod_oer_praseoriginalscount|Phrase Number of UNESCO Originals|Number of UNESCO Originals
+TEXT: mod_oer_praseadaptationscount|Phrase Number of adaptations|Number of adaptations
+TEXT: mod_oer_praselanguagecount|Phrase Number of languages in UNESCO Originals|Number of languages in UNESCO Originals
+TEXT: mod_oer_praseadaptationlanguagecount|Phrase Number of languages in adaptations|Number of languages in adaptations
 COMMENT: ------------- TEXT FOR GROUPS ----------------
 TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
 TEXT: mod_oer_group_fieldset2|Heading for group fieldset no2 link|Group Contact Details
