[pwando] added OER reporting tool - Remaining - by region & country

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -326,10 +326,25 @@ TEXT: mod_oer_institutioninuse|Phrase this institution is in use|This institutio
 COMMENT: ------------- TEXT FOR REPORTS ----------------
 TEXT: mod_oer_wordproperty|Word Property|Property
 TEXT: mod_oer_wordvalue|Word Value|Value
+TEXT: mod_oer_wordgeneral|Word General|General
 TEXT: mod_oer_praseoriginalscount|Phrase Number of UNESCO Originals|Number of UNESCO Originals
 TEXT: mod_oer_praseadaptationscount|Phrase Number of adaptations|Number of adaptations
 TEXT: mod_oer_praselanguagecount|Phrase Number of languages in UNESCO Originals|Number of languages in UNESCO Originals
 TEXT: mod_oer_praseadaptationlanguagecount|Phrase Number of languages in adaptations|Number of languages in adaptations
+TEXT: mod_oer_originallangbreakdown|Phrase Language breakdown - originals|Language breakdown - originals
+TEXT: mod_oer_adaptationlangbreakdown|Phrase Language breakdown - adaptations|Language breakdown - adaptations
+TEXT: mod_oer_nooriginallangs|Phrase No Languages are specified for original products|No Languages are specified for original products
+TEXT: mod_oer_noadaptationlangs|Phrase No Languages are specified for adaptations|No Languages are specified for adaptations
+TEXT: mod_oer_noadaptationinst|Phrase No Institutions are specified for adaptations|No Institutions are specified for adaptations
+TEXT: mod_oer_noadaptationtypeoriginals|Phrase No types are specified for original products|No types are specified for original products
+TEXT: mod_oer_noadaptationtypeadaptations|Phrase No types are specified for adaptations|No types are specified for adaptations
+TEXT: mod_oer_breakdownbyinst|Phrase Breakdown by type - institutions|Breakdown by type - institutions
+TEXT: mod_oer_breakdownbyoriginals|Phrase Breakdown by type - originals|Breakdown by type - originals
+TEXT: mod_oer_breakdownbyadaptations|Phrase Breakdown by type - adaptations|Breakdown by type - adaptations
+TEXT: mod_oer_breakdownbyregion|Phrase Breakdown by region - adaptations|Breakdown by region - adaptations
+TEXT: mod_oer_breakdownbycountry|Phrase Breakdown by country - adaptations|Breakdown by country - adaptations
+
+TEXT: mod_oer_total|Word Total|Total
 COMMENT: ------------- TEXT FOR GROUPS ----------------
 TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
 TEXT: mod_oer_group_fieldset2|Heading for group fieldset no2 link|Group Contact Details
