[pwand] - Added breakdown by country

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.184
+MODULE_VERSION: 0.185
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -14,7 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
-UPDATE_DESCRIPTION: [pwando] - Fixed full view for adaptation and section content
+UPDATE_DESCRIPTION: [pwando] - Added initial reports
 
 COMMENT: Blocks used in the OER module
 WIDEBLOCK: groupedit
@@ -343,6 +343,7 @@ TEXT: mod_oer_breakdownbyoriginals|Phrase Breakdown by type - originals|Breakdow
 TEXT: mod_oer_breakdownbyadaptations|Phrase Breakdown by type - adaptations|Breakdown by type - adaptations
 TEXT: mod_oer_breakdownbyregion|Phrase Breakdown by region - adaptations|Breakdown by region - adaptations
 TEXT: mod_oer_breakdownbycountry|Phrase Breakdown by country - adaptations|Breakdown by country - adaptations
+TEXT: mod_oer_countryadaptation|Phrase Country of adaptation|Country of adaptation
 
 TEXT: mod_oer_total|Word Total|Total
 COMMENT: ------------- TEXT FOR GROUPS ----------------
