added report filter

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.185
+MODULE_VERSION: 0.186
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -344,6 +344,24 @@ TEXT: mod_oer_breakdownbyadaptations|Phrase Breakdown by type - adaptations|Brea
 TEXT: mod_oer_breakdownbyregion|Phrase Breakdown by region - adaptations|Breakdown by region - adaptations
 TEXT: mod_oer_breakdownbycountry|Phrase Breakdown by country - adaptations|Breakdown by country - adaptations
 TEXT: mod_oer_countryadaptation|Phrase Country of adaptation|Country of adaptation
+
+TEXT: mod_oer_reportingtool|Phrase reporting tool|Reporting tool
+TEXT: mod_oer_word_adaptations_by_multiple_creteria|Phrase adaptations by multiple creteria|Adaptations by multiple creteria
+TEXT: mod_oer_charts|Word Charts|Charts
+TEXT: mod_oer_countryandregion|Phrase Country and Region|Country and Region
+TEXT: mod_oer_selectcountry|Phrase Select country|Select country
+TEXT: mod_oer_selectregion|Phrase Select Region|Select region
+TEXT: mod_oer_ctrl_country|Phrase Use CTRL button to select more than one country|Use CTRL button to select more than one country
+TEXT: mod_oer_ctrl_region|Phrase Use CTRL button to select more than one region|Use CTRL button to select more than one region
+TEXT: mod_oer_ctrl_theme|Phrase Use CTRL button to select more than one theme|Use CTRL button to select more than one theme
+TEXT: mod_oer_ctrl_language|Phrase Use CTRL button to select more than one language|Use CTRL button to select more than one language
+TEXT: mod_oer_themesandkeywords|Phrase Themes and Keywords|Themes and Keywords
+TEXT: mod_oer_unescotheme|Phrase UNESCO Theme|UNESCO Theme
+TEXT: mod_oer_adaptationtype|Adaptation Type|Adaptation Type
+TEXT: mod_oer_generatereport|Phrase Generate Report|Generate Report
+TEXT: mod_oer_reset|Word Reset|Reset
+TEXT: mod_oer_output|Word Output|Output
+TEXT: mod_oer_reportformat|Phrase Report Format|Report Format
 
 TEXT: mod_oer_total|Word Total|Total
 COMMENT: ------------- TEXT FOR GROUPS ----------------
