--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.186
+MODULE_VERSION: 0.187
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -13,6 +13,7 @@ DEPENDS: creativecommons
 DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
+DEPENDS: langadmin
 
 UPDATE_DESCRIPTION: [pwando] - Added initial reports
 
