--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.187
+MODULE_VERSION: 0.188
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -268,6 +268,7 @@ TEXT: mod_oer_createadaptation|Phrase Create an adaptation|Create an adaptation
 TEXT: mod_oer_compareadaptation|Phrase Compare adaptations|Compare adaptations
 TEXT: mod_oer_compareselected|Phrase Compare selected|Compare selected
 TEXT: mod_oer_clearselection|Phrase Clear selection|Clear selection
+TEXT: mod_oer_viewsection|Phrase You selected a folder node. Folder nodes do not have viewable content. Choose a different node.|You selected a folder node. Folder nodes do not have viewable content. Choose a different node.
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????<<<<<<<<<<<<<<<<<<<<<<,
 TEXT: mod_oer_loclat|Latitude|Latitude
